--- a/index.html
+++ b/index.html
@@ -122,10 +122,30 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 						<h1>Arif & Annisa</h1>
-						<p style="margin-bottom: 0">Kepada Bapak/Ibu/Saudara/i</p>
-						<p>Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
+						<p style="font-family:Gabriola;margin-bottom: 0">Kepada Bapak/Ibu/Saudara/i</p>
+						<p style="font-family:Gabriola;">Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
+<script>
+    getParameters();
+
+
+    function getParameters() {
+//XSS Attack is here ;)
+        let urlString = window.location.href;
+        let paramString = urlString.split('?')[1];
+        let queryString = new URLSearchParams(paramString);
+        for(let param of queryString.entries()) {
+                if(param[0] == 'to' & param[1] != ''){
+                document.writeln("<h3 style=font-family:Gadugi;color:#d4d4d4;><b>" + param[1] + "</b></h3><br>");
+
+        }
+
+    }
+
+}
+</script>
 
 						<button class="btn btn-primary" id="open-invitation">Buka Undangan</button>
+						<p style="font-size:12px;font-family:Segoe"><small>*mohon maaf apabila ada kesalahan penulisan nama/gelar</small></p>
 					</div>
 				</div>
 			</div>
@@ -149,7 +169,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h1>Arif & Annisa</h1>
-					<p style="color: #bf9b73">Kami berharap Anda menjadi bagian dari hari istimewa kami!</p>
+					<p style="font-family:Gabriola;color: #bf9b73">Kami berharap Anda menjadi bagian dari hari istimewa kami!</p>
 					<div class="simply-countdown simply-countdown-wedding"></div>
 					<br>
 					<p>
@@ -169,7 +189,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<img src="images/bismillah.svg" alt="" style="margin-bottom: 20px">
 					<h2>Assalamu'alaikum Warahmatullahi Wabarakatuh</h2>
-					<p style="color: #bf9b73">Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
+					<p style="font-family:Gabriola;color: #bf9b73">Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -178,8 +198,8 @@
 						<img src="images/tinified/aa3.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Annisa Fitri Nurrahmi</h3>
-						<p><span style="color: #bf9b73">Putri dari</span><br>
+						<h3 style="font-size:40px"><b>Annisa Fitri Nurrahmi</b></h3>
+						<p><span style="font-family:Gabriola;color: #bf9b73">Putri dari</span><br>
 							<span class="parents-font">Bapak Rudy Ruswandi</span>
 							<br>
 							<span class="parents-font">Ibu Ade Nuryati</span>
@@ -192,8 +212,8 @@
 						<img src="images/tinified/aa2.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Arif Firdaus</h3>
-						<p><span style="color: #bf9b73">Putra dari</span><br>
+						<h3 style="font-size:50px"><b>Arif Firdaus</b></h3>
+						<p><span style="font-family:Gabriola;color: #bf9b73">Putra dari</span><br>
 							<span class="parents-font">Bapak Achmad Effendi</span>
 							<br>
 							<span class="parents-font">Ibu R.Nining Ratnaningsih</span>
@@ -267,7 +287,7 @@
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm-2">
 						<img src="images/003-luxury.svg" class="svg">
-						<h2>In Happy Moment</h2>
+						<h2 style="font-family:Segoe Script;"">In Happy Moment</h2>
 					</div>
 				</div>
 			</div>
@@ -351,7 +371,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Protokol Kesehatan & Anjuran</h2>
-					<p style="color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
+					<p style="font-family:Gabriola;color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
 				</div>
 
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -405,7 +425,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 						<div class="col-md-4 col-xs-6">
 						</div>
 					</div>
-					<p style="color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
+					<p style="font-family:Gabriola;color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
 					<div class="row">
 						<div class="col-md-4 col-xs-6">
 							<div class="item-protocol">
@@ -444,7 +464,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Buku Tamu & Ucapan</h2>
-					<span style="color: #bf9b73">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.</span>
+					<span style="font-family:Gabriola;color: #bf9b73">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.</span>
 				</div>
 			</div>
 
@@ -470,7 +490,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 					<p>
 						Merupakan suatu kehormatan dan kebahagiaan bagi kami, apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan doa restu.
 						<br>Atas kehadiran dan doa restunya, kami mengucapkan terima kasih.
-					<h3 style="color: #bf9b73">Wassalamu'alaikum Warahmatullahi Wabarakatuh</h3>
+					<h3 style="font-family:Gabriola;color: #bf9b73">Wassalamu'alaikum Warahmatullahi Wabarakatuh</h3>
 					Jazakumullahu Khairan
 					</p>
 					<img src="images/wedding.png" width="100" height="100">
@@ -622,6 +642,8 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 		}
 	}
 </script>
+
+
 
 <!-- <script>
 	function akadLocation(){
