--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 						<h1>Arif & Annisa</h1>
-						<p style="font-family:Gabriola;margin-bottom: 0">Kepada Bapak/Ibu/Saudara/i</p>
-						<p style="font-family:Gabriola;">Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
+						<p style="margin-bottom: 0">Kepada Bapak/Ibu/Saudara/i</p>
+						<p>Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
 <script>
     getParameters();
 
