--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -64,13 +66,6 @@
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-	<!--<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.5.0-beta.2/css/lightgallery-bundle.min.css" />-->
-<!-- 	<link type="text/css" rel="stylesheet" href="lib/lightgallery.js/dist/css/lightgallery-bundle.min.css" />
-	<link type="text/css" rel="stylesheet" href="lib/lightgallery.js/dist/css/lg-thumbnail.css" />
-	<link type="text/css" rel="stylesheet" href="lib/lightgallery.js/dist/css/lg-autoplay.css" />
-	<link type="text/css" rel="stylesheet" href="lib/lightgallery.js/dist/css/lg-fullscreen.css" />
-	<link type="text/css" rel="stylesheet" href="lib/lightgallery.js/dist/css/lg-transitions.css" />
- -->
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -136,7 +131,7 @@
         let queryString = new URLSearchParams(paramString);
         for(let param of queryString.entries()) {
                 if(param[0] == 'to' & param[1] != ''){
-                document.writeln("<h3 style=font-family:Gadugi;color:#d4d4d4;><b>" + param[1] + "</b></h3><br>");
+                document.writeln("<h3 style=font-family:Dinomik;color:#d4d4d4;><b>" + param[1] + "</b></h3><br>");
 
         }
 
@@ -146,7 +141,7 @@
 </script>
 
 						<button class="btn btn-primary" id="open-invitation">Buka Undangan</button>
-						<p style="font-size:12px;font-family:Segoe"><small>*mohon maaf apabila ada kesalahan penulisan nama/gelar</small></p>
+						<p style="font-size:12px;font-family:Consolas"><small>*mohon maaf apabila ada kesalahan penulisan nama/gelar</small></p>
 					</div>
 				</div>
 			</div>
@@ -170,7 +165,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h1>Arif & Annisa</h1>
-					<p style="font-family:Gabriola;color: #bf9b73">Kami berharap Anda menjadi bagian dari hari istimewa kami!</p>
+					<p style="font-family:Sofia;color: #bf9b73">Kami berharap Anda menjadi bagian dari hari istimewa kami!</p>
 					<div class="simply-countdown simply-countdown-wedding"></div>
 					<br>
 					<p>
@@ -190,7 +185,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<img src="images/bismillah.svg" alt="" style="margin-bottom: 20px">
 					<h2>Assalamu'alaikum Warahmatullahi Wabarakatuh</h2>
-					<p style="font-family:Gabriola;color: #bf9b73">Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
+					<p style="font-size:15px;font-family:Dinomik;color: #bf9b73">Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -200,7 +195,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3 style="font-size:40px"><b>Annisa Fitri Nurrahmi</b></h3>
-						<p><span style="font-family:Gabriola;color: #bf9b73">Putri dari</span><br>
+						<p><span style="font-family:Sofia;color: #bf9b73">Putri dari</span><br>
 							<span class="parents-font">Bapak Rudy Ruswandi</span>
 							<br>
 							<span class="parents-font">Ibu Ade Nuryati</span>
@@ -213,8 +208,8 @@
 						<img src="images/tinified/aa2.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3 style="font-size:50px"><b>Arif Firdaus</b></h3>
-						<p><span style="font-family:Gabriola;color: #bf9b73">Putra dari</span><br>
+						<h3 style="font-size:40px"><b>Arif Firdaus</b></h3>
+						<p><span style="font-family:Sofia;color: #bf9b73">Putra dari</span><br>
 							<span class="parents-font">Bapak Achmad Effendi</span>
 							<br>
 							<span class="parents-font">Ibu R.Nining Ratnaningsih</span>
@@ -288,7 +283,7 @@
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm-2">
 						<img src="images/003-luxury.svg" class="svg">
-						<h2 style="font-family:Segoe Script;"">In Happy Moment</h2>
+						<h2 style="font-family:Sofia;">In Happy Moment</h2>
 					</div>
 				</div>
 			</div>
@@ -300,7 +295,7 @@
 							<div class="timeline-panel">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Taaruf</h3>
+									<h3 class="timeline-title" style="font-family:HomemadeS;">Taaruf</h3>
 									<span class="date">11 Juni 2022</span>
 								</div>
 								<div class="timeline-body">
@@ -313,7 +308,7 @@
 							<div class="timeline-panel">
 								<div class="overlay overlay-2"></div>
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Nadzor</h3>
+									<h3 class="timeline-title" style="font-family:HomemadeS;">Nadzor</h3>
 									<span class="date">26 Juni 2022</span>
 								</div>
 								<div class="timeline-body">
@@ -326,7 +321,7 @@
 							<div class="timeline-panel">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Khitbah</h3>
+									<h3 class="timeline-title" style="font-family:HomemadeS;">Khitbah</h3>
 									<span class="date">07 Agustus 2022</span>
 								</div>
 								<div class="timeline-body">
@@ -340,7 +335,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 							<div class="timeline-panel">
 								<div class="overlay overlay-2"></div>
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Akad dan Walimah</h3>
+									<h3 class="timeline-title" style="font-family:HomemadeS;">Akad dan Walimah</h3>
 									<span class="date">23-24 Desember 2022</span>
 								</div>
 								<div class="timeline-body">
@@ -372,7 +367,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Protokol Kesehatan & Anjuran</h2>
-					<p style="font-family:Gabriola;color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
+					<p style="color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
 				</div>
 
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -426,7 +421,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 						<div class="col-md-4 col-xs-6">
 						</div>
 					</div>
-					<p style="font-family:Gabriola;color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
+					<p style="font-family:Sofia;color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
 					<div class="row">
 						<div class="col-md-4 col-xs-6">
 							<div class="item-protocol">
@@ -465,7 +460,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Buku Tamu & Ucapan</h2>
-					<span style="font-family:Gabriola;color: #bf9b73">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.</span>
+					<span style="color: #bf9b73">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.</span>
 				</div>
 			</div>
 
@@ -491,7 +486,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 					<p>
 						Merupakan suatu kehormatan dan kebahagiaan bagi kami, apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan doa restu.
 						<br>Atas kehadiran dan doa restunya, kami mengucapkan terima kasih.
-					<h3 style="font-family:Gabriola;color: #bf9b73">Wassalamu'alaikum Warahmatullahi Wabarakatuh</h3>
+					<h3 style="font-family:Sofia;color: #bf9b73">Wassalamu'alaikum Warahmatullahi Wabarakatuh</h3>
 					Jazakumullahu Khairan
 					</p>
 					<img src="images/wedding.png" width="100" height="100">
