--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3 style="font-size:40px"><b>Annisa Fitri Nurrahmi</b></h3>
-						<p><span style="font-family:Sofia;color: #bf9b73">Putri dari</span><br>
+						<p><span style="font-size:14px;font-family:HomemadeS;color: #bf9b73">Putri dari</span><br>
 							<span class="parents-font">Bapak Rudy Ruswandi</span>
 							<br>
 							<span class="parents-font">Ibu Ade Nuryati</span>
@@ -209,7 +209,7 @@
 					</div>
 					<div class="desc-bride">
 						<h3 style="font-size:40px"><b>Arif Firdaus</b></h3>
-						<p><span style="font-family:Sofia;color: #bf9b73">Putra dari</span><br>
+						<p><span style="font-size:14px;font-family:HomemadeS;color: #bf9b73">Putra dari</span><br>
 							<span class="parents-font">Bapak Achmad Effendi</span>
 							<br>
 							<span class="parents-font">Ibu R.Nining Ratnaningsih</span>
@@ -354,7 +354,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 		<!--<img height="400" width="100%" style="top: 0" src="images/background/wave-up.svg">-->
 		<img height="400" width="100%" style="position: absolute; bottom: -175px" src="images/background/wave-down.svg">
 		<div class="container">
-			<div class="ayat-content animate-box">
+			<div class="ayat-content animate-box" style="font-family:Dinomik;">
 				Dan di antara tanda-tanda kekuasaan-Nya lah Dia menciptakan untukmu istri-istri dari jenismu sendiri, supaya kamu cenderung dan merasa tenteram kepadanya, dan dijadikan-Nya diantaramu rasa kasih dan sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagi kaum yang berfikir.
 				<br>
 				<b>- Q.S Ar Rum : 21 -</b>
@@ -367,7 +367,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Protokol Kesehatan & Anjuran</h2>
-					<p style="color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
+					<p style="font-family:Dinomik;color: #bf9b73">Guna mencegah penyebaran Covid-19, diharapkan bagi tamu undangan untuk mematuhi Protokol Kesehatan di bawah ini :</p>
 				</div>
 
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -421,7 +421,7 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 						<div class="col-md-4 col-xs-6">
 						</div>
 					</div>
-					<p style="font-family:Sofia;color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
+					<p style="font-family:Dinomik;color: #bf9b73">dan mengikuti anjuran di bawah ini :</p>
 					<div class="row">
 						<div class="col-md-4 col-xs-6">
 							<div class="item-protocol">
