--- a/index.html
+++ b/index.html
@@ -712,8 +712,8 @@ Arif pun datang untuk memperkenalkan diri dan keluarga, lalu mengkhitbah. tidak 
 		slideDelay: 400,
 		dynamicEl: [
 			{
-				src: 'images/gallery/neng1.jpg',
-				thumb: 'images/gallery/neng1.jpg',
+				src: 'images/gallery/khitbah1.jpg',
+				thumb: 'images/gallery/khitbah1.jpg',
 				/*subHtml: `<div class="lightGallery-captions">
 					<h4>Caption 1</h4>
 					<p>Description of the slide 1</p>
